--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "fs": "^0.0.1-security",
     "moment": "^2.30.1",
     "mongoose": "^8.10.1",
+    "morgan": "^1.10.0",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0"
   }
