--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.10.1",
     "morgan": "^1.10.0",
     "pino": "^9.6.0",
-    "pino-pretty": "^13.0.0"
+    "pino-pretty": "^13.0.0",
+    "pjn-models": "github:cerramaximiliano/pjn-models"
   }
 }
