--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,54 +50,27 @@ jobs:
         
         # Run deployment commands on EC2
         ssh -o StrictHostKeyChecking=no -i private_key -p ${PORT:-22} ${USERNAME}@${HOST} << 'ENDSSH'
-          # Try to load .bashrc and .profile for PATH
-          [ -f ~/.bashrc ] && source ~/.bashrc
-          [ -f ~/.profile ] && source ~/.profile
-          
-          # Add common paths where node might be installed
-          export PATH="/usr/local/bin:/usr/bin:/bin:$PATH"
-          
           cd ~/pjn-api
           
-          # Check if Node.js is available (with or without sudo)
-          if command -v node &> /dev/null; then
-            NODE_CMD="node"
-            NPM_CMD="npm"
-          elif sudo -n command -v node &> /dev/null 2>&1; then
-            NODE_CMD="sudo node"
-            NPM_CMD="sudo npm"
-          else
-            echo "❌ Error: Node.js is not installed or not in PATH!"
-            echo ""
-            echo "Node.js is installed but not accessible to user $USER"
-            echo "Please run this fix script on your EC2 server:"
-            echo ""
-            echo "bash ~/pjn-api/scripts/fix-nodejs-path.sh"
-            echo ""
-            echo "Then logout and login again, or run: source ~/.bashrc"
-            exit 1
-          fi
+          # For now, we'll use sudo to access Node.js since it's already installed
+          echo "Using sudo to access Node.js..."
           
           # Install dependencies
-          echo "Installing dependencies with: $NPM_CMD"
-          $NPM_CMD ci --production
+          sudo npm ci --production
           
           # Check for PM2 and install if needed
-          if ! command -v pm2 &> /dev/null && ! sudo -n command -v pm2 &> /dev/null 2>&1; then
+          if ! sudo command -v pm2 &> /dev/null 2>&1; then
             echo "PM2 not found, installing..."
-            $NPM_CMD install -g pm2 || sudo npm install -g pm2
+            sudo npm install -g pm2
           fi
           
           # Reload PM2 with the ecosystem config
-          if command -v pm2 &> /dev/null; then
-            pm2 reload ecosystem.config.js --env production
-            pm2 save
-            pm2 status
-          else
-            sudo pm2 reload ecosystem.config.js --env production
-            sudo pm2 save
-            sudo pm2 status
-          fi
+          sudo pm2 reload ecosystem.config.js --env production
+          sudo pm2 save
+          
+          # Show status
+          echo "PM2 Status:"
+          sudo pm2 status
         ENDSSH
         
         # Clean up
