--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,59 +52,22 @@ jobs:
         ssh -o StrictHostKeyChecking=no -i private_key -p ${PORT:-22} ${USERNAME}@${HOST} << 'ENDSSH'
           cd ~/pjn-api
           
-          echo "🔍 Finding Node.js and PM2 paths..."
-          # Find the actual paths as root
-          NODE_PATH=$(sudo -s which node 2>/dev/null || echo "")
-          NPM_PATH=$(sudo -s which npm 2>/dev/null || echo "")
-          PM2_PATH=$(sudo -s which pm2 2>/dev/null || echo "")
-          
-          echo "Node path: ${NODE_PATH:-not found}"
-          echo "NPM path: ${NPM_PATH:-not found}"
-          echo "PM2 path: ${PM2_PATH:-not found}"
-          
-          # If paths are empty, try common locations
-          if [ -z "$NPM_PATH" ]; then
-            if [ -f "/usr/bin/npm" ]; then
-              NPM_PATH="/usr/bin/npm"
-            elif [ -f "/usr/local/bin/npm" ]; then
-              NPM_PATH="/usr/local/bin/npm"
-            fi
-          fi
-          
-          if [ -z "$PM2_PATH" ]; then
-            if [ -f "/usr/bin/pm2" ]; then
-              PM2_PATH="/usr/bin/pm2"
-            elif [ -f "/usr/local/bin/pm2" ]; then
-              PM2_PATH="/usr/local/bin/pm2"
-            fi
-          fi
-          
-          # Check if we found the binaries
-          if [ -z "$NPM_PATH" ]; then
-            echo "❌ Error: npm not found!"
-            echo "Try running: sudo which npm"
-            exit 1
-          fi
-          
           echo "📦 Installing dependencies..."
-          sudo $NPM_PATH ci --production
+          # Run npm as root with its environment
+          sudo su - root -c "cd $(pwd) && npm ci --production"
           
           echo "🔄 Reloading PM2 application..."
-          if [ -n "$PM2_PATH" ]; then
-            sudo $PM2_PATH reload ecosystem.config.js --env production
-            sudo $PM2_PATH save
-            
-            echo "📊 PM2 Status:"
-            sudo $PM2_PATH status
-            
-            echo "📋 Application logs (last 20 lines):"
-            sudo $PM2_PATH logs 'pjn/api' --lines 20 --nostream || true
-          else
-            echo "⚠️  PM2 not found, trying to install it..."
-            sudo $NPM_PATH install -g pm2
-            PM2_PATH=$(sudo -s which pm2 2>/dev/null || echo "/usr/bin/pm2")
-            sudo $PM2_PATH reload ecosystem.config.js --env production
-          fi
+          # Run PM2 commands as root
+          sudo su - root -c "cd $(pwd) && pm2 reload ecosystem.config.js --env production"
+          sudo su - root -c "pm2 save"
+          
+          echo "📊 PM2 Status:"
+          sudo su - root -c "pm2 status"
+          
+          echo "📋 Application logs (last 20 lines):"
+          sudo su - root -c "pm2 logs 'pjn/api' --lines 20 --nostream" || true
+          
+          echo "✅ Deployment completed!"
         ENDSSH
         
         # Clean up
