--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -73,28 +73,44 @@ jobs:
         # Clean up
         rm -f private_key
     
-    - name: Health Check
+    - name: Health Check via SSH
       env:
         HOST: ${{ secrets.EC2_HOST }}
-        APP_PORT: ${{ secrets.APP_PORT }}
+        USERNAME: ${{ secrets.EC2_USERNAME }}
+        KEY: ${{ secrets.EC2_SSH_KEY }}
+        SSH_PORT: ${{ secrets.EC2_SSH_PORT }}
       run: |
-        echo "Waiting for application to start..."
-        sleep 10
+        echo "🔍 Checking application status via SSH..."
         
-        # Check if the API is responding
-        MAX_ATTEMPTS=30
-        ATTEMPT=0
+        # Setup SSH key
+        echo "$KEY" > private_key_health
+        chmod 600 private_key_health
         
-        while [ $ATTEMPT -lt $MAX_ATTEMPTS ]; do
-          if curl -f -s -o /dev/null "http://${HOST}:${APP_PORT:-8083}/api/test" || curl -f -s -o /dev/null "http://${HOST}:${APP_PORT:-8083}/api/causas/test"; then
-            echo "✅ Application is running successfully!"
-            exit 0
-          fi
+        # Check if the app is running on the server
+        ssh -o StrictHostKeyChecking=no -i private_key_health -p ${SSH_PORT:-22} ${USERNAME}@${HOST} << 'ENDSSH'
+          echo "📊 PM2 Status:"
+          sudo su - root -c "pm2 status"
           
-          ATTEMPT=$((ATTEMPT + 1))
-          echo "Attempt $ATTEMPT/$MAX_ATTEMPTS - Application not ready yet..."
-          sleep 2
-        done
+          echo ""
+          echo "🔍 Checking pjn/api process:"
+          if sudo su - root -c "pm2 status | grep -q 'pjn/api.*online'"; then
+            echo "✅ Application is running!"
+            
+            echo ""
+            echo "📋 Recent logs:"
+            sudo su - root -c "pm2 logs 'pjn/api' --lines 10 --nostream" || true
+            
+            exit 0
+          else
+            echo "❌ Application is not running or not in 'online' status"
+            
+            echo ""
+            echo "📋 Error logs:"
+            sudo su - root -c "pm2 logs 'pjn/api' --lines 20 --nostream" || true
+            
+            exit 1
+          fi
+        ENDSSH
         
-        echo "❌ Application failed to start or respond"
-        exit 1
+        # Clean up
+        rm -f private_key_health
