--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,26 +48,36 @@ jobs:
           -e "ssh -o StrictHostKeyChecking=no -i private_key -p ${PORT:-22}" \
           ./ ${USERNAME}@${HOST}:~/pjn-api/
         
-        # Run deployment commands on EC2
+        # Create deployment script on the server
         ssh -o StrictHostKeyChecking=no -i private_key -p ${PORT:-22} ${USERNAME}@${HOST} << 'ENDSSH'
-          cd ~/pjn-api
+          cat > /tmp/deploy_pjn_api.sh << 'DEPLOY_SCRIPT'
+#!/bin/bash
+cd /home/ubuntu/pjn-api
+
+echo "📦 Installing dependencies..."
+npm ci --production
+
+echo "🔄 Reloading PM2 application..."
+pm2 reload ecosystem.config.js --env production || pm2 start ecosystem.config.js --env production
+pm2 save
+
+echo "📊 PM2 Status:"
+pm2 status
+
+echo "📋 Application logs (last 20 lines):"
+pm2 logs 'pjn/api' --lines 20 --nostream || true
+
+echo "✅ Deployment completed!"
+DEPLOY_SCRIPT
+
+          chmod +x /tmp/deploy_pjn_api.sh
           
-          echo "📦 Installing dependencies..."
-          # Run npm as root with its environment
-          sudo su - root -c "cd $(pwd) && npm ci --production"
+          # Execute the script as root
+          echo "🚀 Running deployment script as root..."
+          sudo bash -l /tmp/deploy_pjn_api.sh
           
-          echo "🔄 Reloading PM2 application..."
-          # Run PM2 commands as root
-          sudo su - root -c "cd $(pwd) && pm2 reload ecosystem.config.js --env production"
-          sudo su - root -c "pm2 save"
-          
-          echo "📊 PM2 Status:"
-          sudo su - root -c "pm2 status"
-          
-          echo "📋 Application logs (last 20 lines):"
-          sudo su - root -c "pm2 logs 'pjn/api' --lines 20 --nostream" || true
-          
-          echo "✅ Deployment completed!"
+          # Clean up
+          rm -f /tmp/deploy_pjn_api.sh
         ENDSSH
         
         # Clean up
@@ -86,30 +96,53 @@ jobs:
         echo "$KEY" > private_key_health
         chmod 600 private_key_health
         
-        # Check if the app is running on the server
+        # Create health check script on the server
         ssh -o StrictHostKeyChecking=no -i private_key_health -p ${SSH_PORT:-22} ${USERNAME}@${HOST} << 'ENDSSH'
-          echo "📊 PM2 Status:"
-          sudo su - root -c "pm2 status"
+          cat > /tmp/health_check_pjn.sh << 'HEALTH_SCRIPT'
+#!/bin/bash
+echo "📊 PM2 Status:"
+pm2 status
+
+echo ""
+echo "🔍 Checking pjn/api process:"
+if pm2 status | grep -q 'pjn/api.*online'; then
+  echo "✅ Application is running!"
+  
+  echo ""
+  echo "📋 Recent logs:"
+  pm2 logs 'pjn/api' --lines 10 --nostream || true
+  
+  exit 0
+else
+  echo "❌ Application is not running or not in 'online' status"
+  
+  echo ""
+  echo "📋 Error logs:"
+  pm2 logs 'pjn/api' --lines 20 --nostream || true
+  
+  # Show more debugging info
+  echo ""
+  echo "🔍 Debugging info:"
+  echo "Current user: $(whoami)"
+  echo "PM2 location: $(which pm2 || echo 'not found in PATH')"
+  echo "Node location: $(which node || echo 'not found in PATH')"
+  echo "PATH: $PATH"
+  
+  exit 1
+fi
+HEALTH_SCRIPT
+
+          chmod +x /tmp/health_check_pjn.sh
           
-          echo ""
-          echo "🔍 Checking pjn/api process:"
-          if sudo su - root -c "pm2 status" | grep -q 'pjn/api.*online'; then
-            echo "✅ Application is running!"
-            
-            echo ""
-            echo "📋 Recent logs:"
-            sudo su - root -c "pm2 logs 'pjn/api' --lines 10 --nostream" || true
-            
-            exit 0
-          else
-            echo "❌ Application is not running or not in 'online' status"
-            
-            echo ""
-            echo "📋 Error logs:"
-            sudo su - root -c "pm2 logs 'pjn/api' --lines 20 --nostream" || true
-            
-            exit 1
-          fi
+          # Execute the health check as root
+          echo "🏥 Running health check as root..."
+          sudo bash -l /tmp/health_check_pjn.sh
+          RESULT=$?
+          
+          # Clean up
+          rm -f /tmp/health_check_pjn.sh
+          
+          exit $RESULT
         ENDSSH
         
         # Clean up
